# The-Struggle

./: .gitignore  .travis.yml  Cargo.toml  README.md  _config.yml  art.txt  fetters.toml  requirements.txt  track.py
.github/workflows/: rust.yml
Rust/the-struggle/: Cargo.toml  README.md
Rust/the-struggle/src/: add.rs  cli.rs  m_csv.rs  main.rs
migrations/2025-08-09-041725_init_tables/: down.sql  up.sql
src/: add.rs  cli.py  cli.rs  delete.rs  errors.rs  format.rs  global_vars.py  insights.rs  list.rs  main.rs  mcsv.rs  model.py  model.rs  models.rs  new.py  paint.rs  prompt.rs  schema.rs  search.rs  sqlite.rs  table.rs  titles.rs  update.rs
src/commands/: add.rs  config.rs  delete.rs  insights.rs  list.rs  mod.rs  open.rs  sprint.rs  update.rs
src/config/: configuration.rs  mod.rs
src/functions/: csv_functions.py  delete_functions.py  insight_functions.py  list_functions.py  new_functions.py  search_functions.py  update_functions.py
src/models/: config.rs  insight.rs  job.rs  mod.rs  search.rs  sprint.rs  status.rs  stint.rs  title.rs
src/programs/: delete.py  insight.py  list.py  new.py  update.py
src/prompts/: add.rs  delete.rs  mod.rs
src/repositories/: job.rs  mod.rs  sprint.rs  statuses.rs  title.rs
src/sqlite/: mod.rs  queries.rs  setup.rs
src/subcommands/: add.rs  delete.rs  insights.rs  list.rs  mod.rs  open.rs  resume.rs  update.rs  utils.rs
src/utils/: config.rs  dirs.rs  display.rs  migrations.rs  mod.rs  prompt.rs  titles.rs
struggle/: Track.py  job_applications.csv
struggle/utils/: Cli.py  Csv.py  Decorator.py  Delete.py  Global.py  Insights.py  Job.py  List.py  New.py  Search.py  Titles.py  Tools.py  Update.py
