[package]
authors = ["Joseph Lai <joseph.lai241@protonmail.com>"]
categories = ["command-line-utilities"]
description = "A CLI tool for tracking your job applications"
edition = "2024"
keywords = ["application", "command-line-tool", "job"]
license = "MIT"
name = "fetters"
readme = "README.md"
version = "3.0.0"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.43", features = ["derive"] }
diesel = { version = "2.2.12", features = ["returning_clauses_for_sqlite_3_35", "sqlite"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
directories = "6.0.0"
inquire = "0.7.5"
lazy_static = "1.5.0"
owo-colors = "4.2.2"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }
tabled = { version = "0.20.0", features = ["ansi"] }
thiserror = "2.0.12"
toml = "0.9.5"

[dev-dependencies]
dotenvy = "0.15.7"
